Fix README links, JVM flags and fork changelog
Replace dead API reference and cheat sheet links with local sources,
list the built-in onyx-seq plugin, document the :jvm-opts setting and
the JDK 24+ native access flag, expand the fork changelog (0.2.0
equivalence, log version check, 2023 upgrades), move lein install into
a Building from Source section, and point contributor credit at the
upstream contributors graph.